# qbuck

./: .env.example  .gitignore  .gitmodules  AER.drawio  Makefile  Probability based.csv  README.md  Shoot Himself.csv  Shoot Opponent.csv  Shoot Randomly.csv  analysis.ipynb  buckshot-roulette.ipynb  classical-results-cpp-random.json  classical-results.json  classical.py  clean-quantum-aer-sim-results.json  colors.sh  constants.py  dot-scripts.sh  half.dot  pipeline.sh  probability_based.dot  pyproject.toml  quantum-aer-sim-results-raw.json  quantum-aer-sim-results.json  quantum-results-modified.csv  quantum-results-regular.csv  quantum-results.csv  quantum_default_version.py  quantum_modified_version.py  quantum_noisy.py  quantum_utils.py  random_utility.cpp  script.py  setup-qiskit-aer.sh  test.ipynb  utils.sh  verify_randomness.py
.ipynb_checkpoints/: buckshot-roulette-checkpoint.ipynb
assets/: AER.drawio  quantum-results-modified.csv  quantum-results-noisy-fez.csv  quantum-results-noisy-torino.csv  quantum-results-noisy.csv  quantum-results-regular.csv
dags/: experiments-dag.py
