[project]
name = "qbuck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "pylatexenc>=2.10",
    "qiskit==2.1.1",
    "qiskit-aer>=0.17.1",
    "qiskit-ibm-provider>=0.11.0",
    "tqdm>=4.67.1",
]
